--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -17,7 +17,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[ci skip]')"
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       
     - name: cache dependencies
       uses: actions/cache@v2
@@ -26,30 +26,33 @@ jobs:
         path: ${{ github.workspace }}/${{ env.INSTALL_LOCATION }}
         key: ${{ runner.os }}-dependencies
 
-    - name: install GoogleTest
-      if: ${{ steps.cache.output.cache-hit != 'true' }}
-      run: |
-        cd ..
-        git clone https://github.com/google/googletest.git --branch release-1.10.0
-        cd googletest
-        cmake -Bbuild -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/$INSTALL_LOCATION
-        cmake --build build --config Release
-        cmake --build build --target install --config Release
+      - name: install GoogleTest
+        if: ${{ steps.cache.output.cache-hit != 'true' }}
+        run: |
+          cd ..
+          git clone https://github.com/google/googletest.git --branch release-1.10.0
+          cd googletest
+          cmake -Bbuild -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/$INSTALL_LOCATION
+          cmake --build build --config Release
+          cmake --build build --target install --config Release
 
-    - name: configure
-      run: cmake -Bbuild -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/$INSTALL_LOCATION -DProject_ENABLE_CODE_COVERAGE=1
-      
-    - name: build
-      run: cmake --build build --config $BUILD_TYPE -j4
+      - name: install glfw
+        if: ${{ steps.cache.output.cache-hit != 'true' }}
+        run: |
+          cd ..
+          sudo apt update
+          sudo apt install libglfw3-dev
 
-    - name: run tests
-      run: |
-        cd build
+      - name: configure
+        run: cmake -Bbuild -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/$INSTALL_LOCATION -DProject_ENABLE_CODE_COVERAGE=1
+
+      - name: build
+        run: cmake --build build --config $BUILD_TYPE -j4
+
+      - name: run tests
+        run: |
+          cd build
         ctest -C $BUILD_TYPE -VV
 
     - name: Code coverage using Codecov 
       run: bash <(curl -s https://codecov.io/bash) 
-
-    - name: install project
-      run: cmake --build build --target install --config Release 
-
