Fixed Windows problem.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,8 +188,6 @@ include(cmake/Doxygen.cmake)
 # and letting CMake decide how to link with it.
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
-find_package(glfw3 3.3 REQUIRED)
-find_package(OpenGL REQUIRED)
 
 set(EXT_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/src)
 set(EXT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/include)
@@ -217,10 +215,16 @@ if (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/external/glm/CMakeLists.txt")
   message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
 endif ()
 
+if (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/external/glfw/CMakeLists.txt")
+  message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
+endif ()
+
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/external/glm")
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/external/glfw")
 target_include_directories(glad PUBLIC ${EXT_INCLUDE_DIR})
 message(STATUS "GLM included at ${GLM_INCLUDE_DIR}")
 #target_include_directories(glm PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/external/glm)
+set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
 target_link_libraries(${PROJECT_NAME} PUBLIC glfw glad glm ${CMAKE_DL_LIBS})
 if (${PROJECT_NAME}_BUILD_EXECUTABLE AND ${PROJECT_NAME}_ENABLE_UNIT_TESTING)
   target_link_libraries(${PROJECT_NAME}_LIB PUBLIC glfw glad glm)
