:bug: Conserta no linux.
Signed-off-by: Vinicius J. F <www.vini84200@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ CMakeCache.*
 CMakeFiles/*
 [Tt]esting/*
 
+.idea/
+cmake-build-debug
+cmake-build-debug-coverage
+
 ### VisualStudioCode ###
 .vscode/*
 .vscode/settings.json
