--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,9 +223,14 @@ add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/external/glm")
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/external/glfw")
 target_include_directories(glad PUBLIC ${EXT_INCLUDE_DIR})
 message(STATUS "GLM included at ${GLM_INCLUDE_DIR}")
+message(STATUS "GLFW included at ${GLFW_INCLUDE_DIR}")
 #target_include_directories(glm PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/external/glm)
-set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
-target_link_libraries(${PROJECT_NAME} PUBLIC glfw glad glm ${CMAKE_DL_LIBS})
+if (WIN32)
+  target_link_libraries(${PROJECT_NAME} PUBLIC glad glm glfw3)
+  set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
+else ()
+  target_link_libraries(${PROJECT_NAME} PUBLIC glad glm glfw)
+endif ()
 if (${PROJECT_NAME}_BUILD_EXECUTABLE AND ${PROJECT_NAME}_ENABLE_UNIT_TESTING)
   target_link_libraries(${PROJECT_NAME}_LIB PUBLIC glfw glad glm)
 endif ()
