:green_heart: Adiciona dependências para compilar o glfw.
Signed-off-by: Vinicius J. F <www.vini84200@hotmail.com>

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           cd ..
           sudo apt update
-          sudo apt install libglfw3-dev
+          sudo apt install libwayland-dev libxkbcommon-dev wayland-protocols extra-cmake-modules libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev
 
       - name: configure
         run: cmake -Bbuild -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/$INSTALL_LOCATION -DProject_ENABLE_CODE_COVERAGE=1
