Alterada linha 229 glfw3 -> glfw.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -226,7 +226,7 @@ message(STATUS "GLM included at ${GLM_INCLUDE_DIR}")
 message(STATUS "GLFW included at ${GLFW_INCLUDE_DIR}")
 #target_include_directories(glm PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/external/glm)
 if (WIN32)
-  target_link_libraries(${PROJECT_NAME} PUBLIC glad glm glfw3)
+  target_link_libraries(${PROJECT_NAME} PUBLIC glad glm glfw)
   set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
 else ()
   target_link_libraries(${PROJECT_NAME} PUBLIC glad glm glfw)
