--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = external/glfw
 	url = https://github.com/glfw/glfw.git
 	branch=master
+[submodule "external/imgui"]
+	path = external/imgui
+	url = https://github.com/ocornut/imgui.git
