:sparkles: Carregando objs como mesh
Signed-off-by: Vinicius J. F <www.vini84200@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -374,3 +374,6 @@ healthchecksdb
 MigrationBackup/
 
 cmake-build-debug/
+/cmake-build-debug-clang/
+/cmake-build-release-clang/
+/cmake-build-release/
