--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,10 +247,19 @@ if (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/external/spdlog/CMakeLists.txt")
 endif ()
 include_directories(${EXT_DIR}/spdlog/include)
 
+# Tiny Obj Loadern
+set(TINY_OBJ_LOADER ${EXT_DIR}/tinyobjloader)
+add_subdirectory("${TINY_OBJ_LOADER}")
+message(STATUS "TINYOBJLOADER included at ${TINY_OBJ_LOADER}")
+if (NOT EXISTS "${TINY_OBJ_LOADER}/CMakeLists.txt")
+  message(FATAL_ERROR "The submodule were not downloaded! ")
+endif ()
+include_directories(${TINY_OBJ_LOADER})
+
 
 # Linking with the project's dependencies
 # Executable linking
-target_link_libraries(${PROJECT_NAME} PUBLIC glad glm glfw imgui spdlog::spdlog_header_only)
+target_link_libraries(${PROJECT_NAME} PUBLIC glad glm glfw imgui spdlog::spdlog_header_only tinyobjloader)
 if (WIN32)
   set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
 endif ()
