:sparkles: Loading Textures and Materials
Signed-off-by: Vinicius J. F <www.vini84200@hotmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 [submodule "external/tinyobjloader"]
 	path = external/tinyobjloader
 	url = https://github.com/tinyobjloader/tinyobjloader.git
+[submodule "external/stb"]
+	path = external/stb
+	url = https://github.com/nothings/stb.git
