--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ CMakeFiles/*
 cmake-build-debug
 cmake-build-debug-coverage
 
+peda-*
+
 ### VisualStudioCode ###
 .vscode/*
 .vscode/settings.json
