--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -252,7 +252,7 @@ set(TINY_OBJ_LOADER ${EXT_DIR}/tinyobjloader)
 add_subdirectory("${TINY_OBJ_LOADER}")
 message(STATUS "TINYOBJLOADER included at ${TINY_OBJ_LOADER}")
 if (NOT EXISTS "${TINY_OBJ_LOADER}/CMakeLists.txt")
-    message(FATAL_ERROR "The submodule were not downloaded! ")
+  message(FATAL_ERROR "The submodule were not downloaded! ")
 endif ()
 include_directories(${TINY_OBJ_LOADER})
 
@@ -260,15 +260,19 @@ include_directories(${TINY_OBJ_LOADER})
 set(STB_DIR ${EXT_DIR}/stb)
 include_directories(${STB_DIR})
 
+# Octree
+set(OCTREE_DIR ${EXT_DIR}/Octree)
+include_directories(${OCTREE_DIR})
+
 # Linking with the project's dependencies
 # Executable linking
 target_link_libraries(${PROJECT_NAME} PUBLIC glad glm glfw imgui spdlog::spdlog_header_only tinyobjloader)
 if (WIN32)
-    set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
+  set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
 endif ()
 
 if (${PROJECT_NAME}_BUILD_EXECUTABLE AND ${PROJECT_NAME}_ENABLE_UNIT_TESTING)
-    target_link_libraries(${PROJECT_NAME}_LIB PUBLIC glfw glad glm)
+  target_link_libraries(${PROJECT_NAME}_LIB PUBLIC glfw glad glm)
 endif ()
 
 verbose_message("Successfully added all dependencies and linked against them.")
