:poop: First GJK implementation
Signed-off-by: Vinicius J. F <www.vini84200@hotmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,7 +270,7 @@ if (WIN32)
   set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
 endif ()
 
-target_link_options(${PROJECT_NAME} PRIVATE -static-libgcc -static-libstdc++)
+#target_link_options(${PROJECT_NAME} PRIVATE -static-libgcc -static-libstdc++)
 
 if (${PROJECT_NAME}_BUILD_EXECUTABLE AND ${PROJECT_NAME}_ENABLE_UNIT_TESTING)
   target_link_libraries(${PROJECT_NAME}_LIB PUBLIC glfw glad glm)
