--- a/.github/workflows/ubuntu-lab.yml
+++ b/.github/workflows/ubuntu-lab.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-16
+    runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[ci skip]')"
 
     steps:
