--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -53,6 +53,9 @@ jobs:
         run: |
           cd build
           ctest -C $BUILD_TYPE -VV
-
-      - name: Code coverage using Codecov
-        run: bash <(curl -s https://codecov.io/bash)
+          
+      - name: upload
+        uses: actions/upload-artifact@v2
+        with: 
+          name: build
+          path: build
