--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -273,7 +273,7 @@ endif ()
 #target_link_options(${PROJECT_NAME} PRIVATE -static-libgcc -static-libstdc++)
 
 if (${PROJECT_NAME}_BUILD_EXECUTABLE AND ${PROJECT_NAME}_ENABLE_UNIT_TESTING)
-  target_link_libraries(${PROJECT_NAME}_LIB PUBLIC glfw glad glm)
+  target_link_libraries(${PROJECT_NAME}_LIB PUBLIC glfw glad glm imgui spdlog::spdlog_header_only tinyobjloader)
 endif ()
 
 verbose_message("Successfully added all dependencies and linked against them.")
